Close #1570 Fix dev-only menus not showing up

--- a/src/pages/strategy/themes/dark.css
+++ b/src/pages/strategy/themes/dark.css
@@ -78,9 +78,6 @@ a:hover {
 	width:100px;
 	margin:0px 0px 10px 0px;
 }
-#menu .submenu.dev-only {
-    display:none;
-}
 #menu .submenu .title {
 	width:100px;
 	height:18px;
